# smart-meter

./: .env.example  LICENSE  README.md  pyproject.toml  smart_meter.py
src/: __init__.py  config.py
