[tool.poetry]
name = "smart-meter"
version = "0.1.0"
description = ""
authors = ["Marco Vellinga <marco@vellinga.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
sentry-sdk = "^1.0.0"
typer = "^0.3.2"
influxdb-client = "^1.15.0"
dsmr_parser = "^0.28"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
